--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,13 @@
 {
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "env": {
         "browser": true,
         "commonjs": true,
@@ -9,5 +17,11 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "no-unused-vars": "off",
+        "no-var": "error",
+        "prefer-const": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-var": "error",
+        "@typescript-eslint/prefer-const": "off"
     }
 }
