--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint src/",
-    "fix": "eslint --fix src/"
+    "test": "eslint compiled/",
+    "fix": "eslint --fix compiled/",
+    "tstest": "eslint src/",
+    "tsfix": "eslint --fix src/",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,10 +21,17 @@
   },
   "homepage": "https://github.com/xAtsuUC/ArkaLife#readme",
   "devDependencies": {
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "dotenv": "^9.0.2",
-    "eslint": "^7.26.0"
+    "eslint": "^7.26.0",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js"
+    "chalk": "^4.1.1",
+    "discord-giveaways": "^4.5.1",
+    "discord.js": "github:discordjs/discord.js",
+    "fs": "0.0.1-security"
   }
 }
