FINALLY GOT THIS MF WORKING (a small typo ruined everything)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "no-var": "error",
         "prefer-const": "off",
         "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/prefer-const": "off"
+        "@typescript-eslint/prefer-const": "off",
+        "@typescript-eslint/no-var-requires": "off"
     }
 }
