--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@discordjs/opus": "github:discordjs/opus",
     "chalk": "^4.1.1",
     "discord-giveaways": "^4.5.1",
     "discord.js": "github:discordjs/discord.js",
-    "fs": "0.0.1-security"
+    "ffmpeg-static": "^4.3.0",
+    "fs": "0.0.1-security",
+    "ytdl-core": "^4.8.0",
+    "ytsr": "^3.5.0"
   }
 }
