fix before linting bc tsc uses var instead of let

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "compiled/index.js",
   "scripts": {
-    "test": "eslint compiled/",
+    "test": "eslint --fix compiled/ && eslint compiled/",
     "fix": "eslint --fix compiled/",
     "tstest": "eslint src/",
     "tsfix": "eslint --fix src/",
