music and compiling, lol

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chalk": "^4.1.1",
     "discord-giveaways": "^4.5.1",
     "discord.js": "github:discordjs/discord.js",
+    "distube": "^2.8.13",
     "ffmpeg-static": "^4.3.0",
     "fs": "0.0.1-security",
     "ytdl-core": "^4.8.0",
