--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@discordjs/collection": "github:discordjs/collection",
     "@discordjs/opus": "github:discordjs/opus",
+    "@types/mysql": "^2.15.18",
     "chalk": "^4.1.1",
     "discord-giveaways": "^4.5.1",
     "discord.js": "github:discordjs/discord.js",
     "distube": "^2.8.13",
     "ffmpeg-static": "^4.3.0",
     "fs": "0.0.1-security",
+    "mysql": "^2.18.1",
     "ytdl-core": "^4.8.0",
     "ytsr": "^3.5.0"
   }
