Ticket system + fixed part of the path bugs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "tstest": "eslint src/",
     "tsfix": "eslint --fix src/",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "run": "node compiled/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,12 +33,14 @@
   "dependencies": {
     "@discordjs/opus": "github:discordjs/opus",
     "@types/mysql": "^2.15.18",
+    "canvas": "^2.8.0",
     "chalk": "^4.1.1",
     "discord-giveaways": "^4.5.1",
     "discord.js": "github:discordjs/discord.js",
     "distube": "^2.8.13",
     "ffmpeg-static": "^4.3.0",
     "fs": "0.0.1-security",
+    "jsdom": "^16.5.3",
     "mysql": "^2.18.1",
     "ytdl-core": "^4.8.0",
     "ytsr": "^3.5.0"
