--- a/compiled/storage/settings.json
+++ b/compiled/storage/settings.json
@@ -8,5 +8,6 @@
         "password": "m2f51=t.2xLWm2c!LgRhgpwp",
         "database": "s272_data",
         "port": "3306"
-    }
+    },
+    "transcriptch": "843890734100512789"
 }
