--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     commit-message: 
-      prefix: "Dependabot npm | "
+      prefix: "npm | "
     labels: 
       - "dependabot"
     schedule:
