--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main, development ]
+    branches: [ production, development ]
   pull_request:
-    branches: [ main ]
+    branches: [ production ]
 
 jobs:
   build:
